# async_demo

./: Cargo.toml  demo.wat  demo2.wasm  wasm_main.rs
src/: main.rs
src/async_sdk/: ast_module.rs  config.rs  executor.rs  mod.rs  module.rs
src/async_sdk/instance/: function.rs  memory.rs
