[package]
name = "async_demo"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryen = {version = "0.12.1", git = "https://github.com/second-state/binaryen-rs.git", branch = "feat/multi-memories-asyncify"}
wasmedge-sdk = "0.1"
wasmedge-sys = "0.7"
wasmedge-types = "0.1"
waker-fn = "1"
chrono = "0.4"


tokio = { version = "1", features = ["full"] }

[features]
aot = []